--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         <img class="page-header__logo" src="img/logo.png" width="42" height="42" alt="Trip logo">
 
         <div class="trip-main">
-          <section class="trip-main__trip-info  trip-info">
+          <section class="trip-main__trip-info  trip-info" id="trip-info">
             <!-- Маршрут -->
 
             <p class="trip-info__cost">
@@ -24,7 +24,7 @@
             </p>
           </section>
 
-          <div class="trip-main__trip-controls  trip-controls">
+          <div class="trip-main__trip-controls  trip-controls" id="trip-controls">
             <h2 class="visually-hidden">Switch trip view</h2>
             <!-- Меню -->
 
