update menu and filter placement

--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,11 @@
             </p>
           </section>
 
-          <div class="trip-main__trip-controls  trip-controls" id="trip-controls">
-            <h2 class="visually-hidden">Switch trip view</h2>
+          <div class="trip-main__trip-controls  trip-controls">
+            <h2 class="visually-hidden" id="menu-title">Switch trip view</h2>
             <!-- Меню -->
 
-            <h2 class="visually-hidden">Filter events</h2>
+            <h2 class="visually-hidden" id="filter-title">Filter events</h2>
             <!-- Фильтры -->
           </div>
 
