--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     </header>
     <main class="page-body__page-main  page-main">
       <div class="page-body__container">
-          <section class="trip-events">
+          <section class="trip-events" id="trip-events">
             <h2 class="visually-hidden">Trip events</h2>
 
             <!-- Сортировка -->
