--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         <img class="page-header__logo" src="img/logo.png" width="42" height="42" alt="Trip logo">
 
         <div class="trip-main">
-          <section class="trip-main__trip-info  trip-info" id="trip-info">
+          <section class="trip-main__trip-info  trip-info">
             <!-- Маршрут -->
 
             <p class="trip-info__cost">
@@ -25,10 +25,10 @@
           </section>
 
           <div class="trip-main__trip-controls  trip-controls">
-            <h2 class="visually-hidden" id="menu-title">Switch trip view</h2>
+            <h2 class="visually-hidden menu-title">Switch trip view</h2>
             <!-- Меню -->
 
-            <h2 class="visually-hidden" id="filter-title">Filter events</h2>
+            <h2 class="visually-hidden filter-title">Filter events</h2>
             <!-- Фильтры -->
           </div>
 
@@ -38,7 +38,7 @@
     </header>
     <main class="page-body__page-main  page-main">
       <div class="page-body__container">
-          <section class="trip-events" id="trip-events">
+          <section class="trip-events">
             <h2 class="visually-hidden">Trip events</h2>
 
             <!-- Сортировка -->
