--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/dev.css">
+
+    <!-- Приглушенный белый цвет для разработки -->
+    <!--<link rel="stylesheet" href="css/dev.css">-->
   </head>
 
   <body class="page-body">
