--- a/public/index.html
+++ b/public/index.html
@@ -25,11 +25,15 @@
           </section>
 
           <div class="trip-main__trip-controls  trip-controls">
-            <h2 class="visually-hidden menu-title">Switch trip view</h2>
-            <!-- Меню -->
+            <div class="trip-main__menu">
+              <h2 class="visually-hidden menu-title">Switch trip view</h2>
+              <!-- Меню -->
+            </div>
 
-            <h2 class="visually-hidden filter-title">Filter events</h2>
-            <!-- Фильтры -->
+            <div class="trip-main__filters">
+              <h2 class="visually-hidden filter-title">Filter events</h2>
+              <!-- Фильтры -->
+            </div>
           </div>
 
           <button class="trip-main__event-add-btn  btn  btn--big  btn--yellow" type="button">New event</button>
