replace Filter with class

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
               <!-- Меню -->
             </div>
 
-            <div class="trip-main__filters">
+            <div class="trip-main__filter">
               <h2 class="visually-hidden filter-title">Filter events</h2>
               <!-- Фильтры -->
             </div>
